Migration WIP: Hive 1.2.2 -> 2.3.9 (T1) + Hive platform JDK 17 toolchain (T2)
Consolidated branch for testing — DO NOT MERGE. Will be split into separate
PRs once integration testing scope is agreed with the team.

T1 — Hive bump (purely compile-time, runtime jar byte-identical):
- transportable-udfs-hive/build.gradle: hive-exec 1.2.2 -> 2.3.9 (compileOnly +
  testImplementation), add `exclude group: 'org.pentaho'` to drop the
  unresolvable pentaho-aggdesigner-algorithm transitive.
- transportable-udfs-test/transportable-udfs-test-hive/build.gradle: same
  hive-exec + hive-service bumps and pentaho exclusions.
- transportable-udfs-plugin/build.gradle: version-info.properties hive-version
  1.2.2 -> 2.3.9, so consumers of the plugin compile against Hive 2.3.9.
- Defaults.java: add `.exclude("org.pentaho")` to the consumer-facing Hive
  compileOnly DependencyConfiguration.
- HiveTester.java: two API/runtime fixes —
  * `new FunctionInfo(false, name, wrapper)` -> `FunctionInfo.FunctionType
    .PERSISTENT`. Hive 2.x dropped the boolean-isNative ctor.
  * Disable `METASTORE_SCHEMA_VERIFICATION` and enable
    `datanucleus.schema.autoCreateAll` on HiveConf. Hive 2.3.x's embedded
    Derby strictly verifies schema version on startup and fails with
    `MetaException: Version information not found in metastore` otherwise.

T2 — Hive platform JDK 17 toolchain (consumer unblock):
- Defaults.java: HIVE platform JavaLanguageVersion.of(8) -> of(17). Lets
  consumers build their compileHiveJava task with the JDK 17 toolchain.
- TransportPlugin.java: pin bytecode target to Java 8 (`options.release.set(8)`)
  for non-Trino platforms, so consumer UDF jars remain runnable on Java 8 Hive
  grid runtimes despite the JDK 17 toolchain. Trino is excluded because Trino
  406+ requires Java 17 bytecode (sealed classes, records).
- TransportPlugin.java: when test launcher is JDK 17 for non-Trino platforms,
  add `--add-opens` for java.base/{lang,lang.invoke,io,net,nio,util,
  util.concurre